【功能】增加mac os的文章

--- a/about.html
+++ b/about.html
@@ -9,8 +9,21 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>写写代码，做做设计，看看产品。<br>
-    世界那么大，我想去看看。</p></blockquote>
+    <blockquote>
+    	<p>
+    		不断学习，不断总结，不断提升<br>
+    		世界那么大，我想去看看。 
+    	</p>
+	</blockquote>
 
+ 	<!--copied from markdown -->
+    <blockquote>
+    	<p>
+    		GitHub：<a target="_blank" href="https://github.com/leehong2005">GitHub</a>
+		</p>
+    	<p>
+    		CSDN：<a target="_blank" href="http://blog.csdn.net/leehong2005">永远即等待的博客</a>
+		</p>
+	</blockquote>
 
 </div>
