--- a/test_index.html
+++ b/test_index.html
@@ -11,13 +11,13 @@ function newOpen(){//184 064 323 438
     var di = document.getElementById("di");
     di.innerHTML = "app have installed";
     var ifc = document.getElementById("ifc");
-    ifc.innerHTML = "<iframe src='mm://xxxxx?a=b&c=d' onload='test2()'></iframe>";
+    ifc.innerHTML = "<iframe src='tbreader://xxxxx?a=b&c=d' onload='test2()'></iframe>";
     return false;
 }
 </script>
 </head>  
 <body>  
- <!-- <a href="#" onclick="return newOpen()">local3</a><br/>  -->
+ <a href="#" onclick="return newOpen()">Open</a><br/>  
 
 <div>
 	 <a href="intent://scan/#Intent;scheme=tbreader;package=com.tbreader.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">打开淘宝阅读</a>
