--- a/test_index.html
+++ b/test_index.html
@@ -21,6 +21,10 @@ function newOpen(){//184 064 323 438
 
 <div>
 	 <a href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;end">打开淘宝阅读</a>
+		
+	 <p>
+	 	href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;end"
+	 </p>
 </div>
 
 
