--- a/test_index.html
+++ b/test_index.html
@@ -23,7 +23,7 @@ function newOpen(){//184 064 323 438
 	 <a href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">打开淘宝阅读</a>
 		
 	 <p>
-	 	href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;end"
+	 	href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"
 	 </p>
 </div>
 
