Add the test html

--- a/test_index.html
+++ b/test_index.html
@@ -20,10 +20,10 @@ function newOpen(){//184 064 323 438
  <a href="#" onclick="return newOpen()">Open</a><br/>  
 
 <div>
-	 <a href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;end">打开淘宝阅读</a>
+	 <a href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;launchFlags=0x10000000;end">打开淘宝阅读</a>
 		
 	 <p>
-	 	href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;end"
+	 	href="intent://open/#Intent;scheme=tbreader;package=com.tbreader.android;launchFlags=0x10000000;end"
 	 </p>
 </div>
 
