Add the test html

--- a/test_index.html
+++ b/test_index.html
@@ -11,7 +11,7 @@ function newOpen(){//184 064 323 438
     var di = document.getElementById("di");
     di.innerHTML = "app have installed";
     var ifc = document.getElementById("ifc");
-    ifc.innerHTML = "<iframe src='tbreader://xxxxx?a=b&c=d' onload='test2()'></iframe>";
+    ifc.innerHTML = "<iframe src='tbreader://open?a=b&c=d' onload='test2()'></iframe>";
     return false;
 }
 </script>
